# eco-genetic-criticality

./: .migration-trigger  .privileged-probe  .transfer-base  DIRECT_TRANSFER_NOTE.md  MIGRATION_COMPLETE.md  MIGRATION_IN_PROGRESS.md  MIGRATION_MANIFEST.md  MIGRATION_READY.md  MIGRATION_STATUS.md  README-stage.md  README.md  TRANSFER_SCOPE.md  TRANSFER_STATUS.md  _endloop.txt  _migration_note.txt  cleanup_marker.txt  last_marker.txt  migration-plan.txt  migration_note.txt  pyproject.toml  stoploop.md  tree_transfer_pending.txt
causal_model/: __init__.py  branch_locked_h1_h2_h3_chain.py  branch_locked_h1_h2_h3_chain_cli.py  canonical_full_simulator_bridge.py  canonical_h1_bifurcation.py  canonical_h2_h3_certificates.py  canonical_h2_lead_boundary.py  canonical_h3_migration_tradeoff.py  censoring_aware_phase_diagram.py  colonization_recruitment_factorization.py  coupled_eco_genetic_certificate.py  eco_genetic_constitutive_theory.py  eco_genetic_lag_theory.py  eco_genetic_principles.py  empirical_measurement_contract.py  finite_bin_closure_bounds.py  finite_coupled_chain_audit.py  finite_h1_boundary_resolution_audit.py  finite_h1_boundary_resolution_audit_cli.py  finite_h1_boundary_seed_ensemble.py  finite_h1_boundary_seed_ensemble_cli.py  finite_h1_branch_separation_audit.py  finite_h1_continuation_state_audit.py  finite_h1_continuation_state_audit_cli.py  finite_h1_fragment_projection_audit.py  finite_h1_fragment_projection_audit_cli.py  finite_h1_hysteresis_audit.py  finite_h1_hysteresis_duration_audit.py  finite_h1_hysteresis_duration_audit_cli.py  (+51 more)
(+179 files in other folders)
