[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-genetic-criticality"
version = "0.1.0"
description = "Theorem-first models of eco-genetic criticality under finite populations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["causal_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
